--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>About MrS4nty</title>
-    <link href="style.css" rel="stylesheet">
-</head>
-<body>
-    <section id="inicio" class="inicio">
-        <div class="contenido-banner">
-            <div class="contenedor-img">
-                <img src="https://assets.codepen.io/8579789/internal/avatars/users/default.png?fit=crop&format=auto&height=512&version=1658782033" alt="">
-            </div>
-            <h1>MrS4nty</h1>
-            <h2>Software Developer - Expert Coding...</h2>
-            <div class="redes">
-                <a href="https://m.facebook.com/santigonzalez11"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="https://twitter.com/SantyGz"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://instagram.com/santy_gz_404"><i class="fa-brands fa-instagram"></i></a>
-                <a href="mailto:dscg2106@gmail.com"><i class="fa-brands fa-google"></i></a>
-            </div>
-        </div>
-    </section>
-</body>
-</html>
-
+ <html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>About MrS4nty</title><link href="style.css" rel="stylesheet"></head><body><article class="profile"><div class="profile-image"><img src="https://assets.codepen.io/8579789/internal/avatars/users/default.png?fit=crop&format=auto&height=512&version=1658782033" /></div><h2 class="profile-username">MrS4nty</h2><small class="profile-user-handle">Expert In The Code <3</small><div class="profile-actions"><a href="https://codepen.io/MrS4nty"><button class="btn btn--primary">Follow Me<i id="codepen" class="ph-codepen-logo"></i></button></a></div><div class="profile-links"><a href="https://twitter.com/SantyGz" target="_blank" class="link link--icon"><i class="ph-twitter-logo"></i></a><a href="https://www.facebook.com/santigonzalez11" target="_blank" class="link link--icon"><i class="ph-facebook-logo"></i></a><a href="https://www.instagram.com/santy_gz_404/" target="_blank"class="link link--icon"><i class="ph-instagram-logo"></i></a></div></article><script src="https://unpkg.com/phosphor-icons"></script></body></html> 
